# shared-knowledge-base

./: .env.example  .gitignore  .gitignore.agents  .gitmodules  .kb-config-local_meta.yaml  .kb-config.yaml  .kb-config_meta.yaml  .kb-version  2026-01-18-this-session-is-being-continued-from-a-previous-co.txt  AGENT-QUICK-START.md  AGENT.md  AGENT2-ANALYSIS-REPORT.md  AGENT6-EXECUTIVE-SUMMARY.md  AGENTS.md  AGENT_AUTOCONFIG_GUIDE.md  ANALYSIS-AGENT4-SUMMARY.md  ANALYSIS-EXECUTIVE-SUMMARY.md  ANALYSIS_AGENT3_TOOLS_REPORT.md  ANALYSIS_REPORT.md  ANALYSIS_SUMMARY.md  ARCHITECTURE_ANALYSIS_REPORT.md  ARD.md  BOOTSTRAP-GUIDE.md  CHANGELOG.md  CLAUDE.md  CLEANUP-QUICK-REFERENCE.md  CLEAN_STRUCTURE_PROPOSAL.md  CURATOR_DOCS_INDEX.md  DELETE_DUPLICATES.sh  DEPLOYMENT_GUIDE.md  DOCUMENTATION_AUDIT_REPORT.md  DUPLICATE_DETECTION_QUICK_REFERENCE.md  ENTERPRISE-KNOWLEDGE-GRAPH.md  EXECUTIVE_SUMMARY.md  FOR_CLAUDE_CODE.md  GITHUB_ATTRIBUTION_GUIDE.md  KB-QUALITY-QUICK-REFERENCE.md  LEGACY-CLEANUP-REPORT.md  LICENSE  LOCAL-INSTALL-GUIDE.md  (+49 more)
.archive/: README.md  migrate_to_clean_structure.sh
.claude/: CLAUDE-CODE-EXPERNT-PLAN.md  CLAUDE-CODE-EXPERT-IMPLEMENTATION-COMPLETE.md  CLAUDE.md  IMPLEMENTATION-COMPLETE.md  IMPROVEMENT-PLAN.md  IMPROVEMENTS-COMPLETE.md  settings.json
.kb/: active-profile.yaml
catalog/: categories.yaml  index.yaml
claude-code/: .curator-only
curator/: AGENT.md  WORKFLOWS.md
docs/: ARD.md  MCP-SERVER.md  PRD.md  README.md  UPGRADE-4.0.md  VALIDATION-SETUP.md  YAML-SCHEMA-V3.1.md
for-claude-code/: AGENT-UPDATE-INSTRUCTIONS.md  KB-UPDATE-QUICK-REFERENCE.md  README.md
for-projects/: AGENT-INSTRUCTIONS.md  AGENT-PROMPT.md  HOW-TO-GIVE-INSTRUCTIONS.md  QUICK-REFERENCE.md  START-HERE.md  (+3 more)
tools/skb-cli/: README.md  pyproject.toml
tools/skb-cli/sku/: __init__.py  auth.py  catalog.py  cli.py  init.py  install.py  publish.py  self_update.py  sync.py  update.py  utils.py
(+568 files in other folders)
